--- a/Healthcare_Reimbursement_Project.ipynb
+++ b/Healthcare_Reimbursement_Project.ipynb
@@ -2623,7 +2623,16 @@
    "id": "92b5b206-3f80-4029-9c43-571dcb8f24ee",
    "metadata": {},
    "source": [
-    "#### Checking Distribution "
+    "#### Normality Test for Numerical Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "462351a2-5e15-462d-8227-9f3de397bfbb",
+   "metadata": {},
+   "source": [
+    "##### Hypothesis Testing \n",
+    "- to check whether numerical variable follow Guassian distribution or not"
    ]
   },
   {
